# agora-simple-filter

Android/APIExample/: .gitignore  checkstyle.gradle  gradle.properties
Android/APIExample/agora-simple-filter/: .gitignore
Android/APIExample/agora-simple-filter/src/main/cpp/: CMakeLists.txt  lib.cmake
Android/APIExample/agora-simple-filter/src/main/cpp/jni/: jni_gpupixel.cc
Android/APIExample/agora-simple-filter/src/main/cpp/plugin_source_code/: ExtensionVideoFilter.cpp  VideoProcessor.cpp  VideoProcessor.h
Android/APIExample/agora-simple-filter/src/main/cpp/utils/: util.cc
Android/APIExample/agora-simple-filter/src/main/java/io/agora/extension/: ExtensionManager.java
Android/APIExample/app/src/main/java/io/agora/api/example/examples/advanced/: SimpleExtension.java
Android/APIExample/app/src/main/res/layout/: fragment_extension.xml
Android/APIExample/app/src/main/res/values/: string_configs.xml
